# opencv_learning

./: CMakeLists.txt  README.md  main.cpp  qsort.hpp  v01_Open_camera.cpp  v02_Read_image.cpp  v03_Image_binarization.cpp  v04_Video_recorder.cpp  v05_Select_box.cpp  v06_Find_center.cpp  v07_Calibration.cpp
include/: v01_Video_binarization.h
